test/spec_vectors/simd_f64x2/fail/module_5.wat
(module (func $f64x2.min-1st-arg-empty (result v128) (f64x2.min (v128.const f64x2 0 0))))